<resources>
    <string name="app_name">Todoc</string>

    <string name="label_action_filter">Filter</string>

    <string name="sort_alphabetical">A -&gt; Z</string>
    <string name="sort_alphabetical_invert">Z -&gt; A</string>
    <string name="sort_oldest_first">Les plus anciens d’abord</string>
    <string name="sort_recent_first">Les plus récents d’abord</string>

    <string name="add_task">Ajouter une tâche</string>
    <string name="add">Ajouter</string>

    <string name="no_task">Tu n’as aucune tâche à traiter</string>

    <string name="task_name_hint">Nom de la tâche</string>

    <string name="empty_task_name">Le nom de la tâche doit être renseigné</string>
    <string name="sort_by_project">Trier par projet</string>
    <string name="tasks_database">tasks_database</string>

    <string name="Awesome_Project">Awesome Project</string>
    <string name="Miraculous_Actions">Miraculous Actions</string>
    <string name="Circus_Project">Circus Project</string>
</resources>
