<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent">

<TextView
    android:id="@+id/lbl_no_task"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    app:drawableTopCompat="@drawable/ic_work_off"
    android:gravity="center_horizontal"
    android:text="@string/no_task"
    android:textSize="22sp"
    tools:visibility="gone" />

<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/list_tasks"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:paddingBottom="88dp"
    tools:itemCount="5"
    tools:listitem="@layout/item_task" />

<com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/fab_add_task"
    android:layout_width="56dp"
    android:layout_height="56dp"
    android:layout_alignParentEnd="true"
    android:layout_alignParentBottom="true"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="16dp"
    android:contentDescription="@string/add_task"
    app:srcCompat="@drawable/ic_add" />
</RelativeLayout>